--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,17 @@
     <string name="breaking_news_label_bottom_bar">Breaking news</string>
     <string name="saved_news_label_bottom_bar">Saved news</string>
     <string name="search_news_label_bottom_bar">Search news</string>
+
+    <!-- Errors -->
+
+    <string name="generic_error">Something went wrong. Please try later.</string>
+    <string name="server_error">Server error. Please try later.</string>
+    <string name="timeout_error">Timeout error. Please try again when network stabilizes.</string>
+    <string name="noInternetConnection_error">No internet connection. Please check the internet.</string>
+    <string name="unauthorized_error">Unauthorized error. Please sign-in and try again.</string>
+    <string name="notFound_error">404 error. Please try later.</string>
+    <string name="badRequest_error">400 error. Bad request. Please try later.</string>
+    <string name="emptyField_error">This field must not be empty.</string>
+
+    <string name="tap_to_exit">Press Back again to exit.</string>
 </resources>
