--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,14 +12,19 @@
 
     <!-- Errors -->
 
-    <string name="generic_error">Something went wrong. Please try later.</string>
-    <string name="server_error">Server error. Please try later.</string>
-    <string name="timeout_error">Timeout error. Please try again when network stabilizes.</string>
-    <string name="noInternetConnection_error">No internet connection. Please check the internet.</string>
-    <string name="unauthorized_error">Unauthorized error. Please sign-in and try again.</string>
-    <string name="notFound_error">404 error. Please try later.</string>
-    <string name="badRequest_error">400 error. Bad request. Please try later.</string>
-    <string name="emptyField_error">This field must not be empty.</string>
+    <string name="error_generic">Something went wrong. Please try again later.</string>
+    <string name="error_no_internet_connection">No Internet connection. Please check the Internet.</string>
+    <string name="error_bad_request">Bad request. Please try again later.</string>
+    <string name="error_forbidden">Access was not granted.</string>
+    <string name="error_not_found">Resource was not found.</string>
+    <string name="error_timeout">Timeout error. Please try again when network stabilizes.</string>
+    <string name="error_conflict">Conflict with the current state of the target resource.</string>
+    <string name="error_unsupported_type">Unsupported data type was provided.</string>
+    <string name="error_too_many_requests">Too many requests.</string>
+    <string name="error_unauthorized">Unauthorized. Please Sign-In and try again.</string>
+    <string name="error_server">Server error. Please try again later.</string>
+
+
 
     <string name="tap_to_exit">Press Back again to exit.</string>
 </resources>
