Improve IU related to loadings.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,6 +22,7 @@
     <!--    General-->
     <string name="general_ok">Принять</string>
     <string name="general_cancel">Отмена</string>
+    <string name="general_undo">Вернуть</string>
     <string name="general_error">Ошибка</string>
     <string name="general_continue">Продолжить</string>
 
