--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,29 +21,23 @@
     <!--    General-->
     <string name="general_ok">Ok</string>
     <string name="general_cancel">Cancel</string>
-    <string name="general_undo">Undo</string>
     <string name="general_error">Error</string>
     <string name="general_continue">Continue</string>
-
-    <!--    Authorization-->
-    <string name="general_sign_in">Sign in</string>
-    <string name="general_sign_out">Sign out</string>
+    <string name="general_no_info">No information</string>
 
     <!--    Toolbar title-->
-    <string name="breaking_news_label_toolbar">Breaking news</string>
-    <string name="saved_news_label_toolbar">Saved news</string>
-    <string name="article_details_label_toolbar">Details</string>
+    <string name="toolbar_title_breaking_news">Breaking news</string>
+    <string name="toolbar_title_saved_news">Saved news</string>
 
-    <!--    SignIn-->
-    <string name="sign_in_status_completed_message">You are already Signed in.\nPress button to continue.</string>
-    <string name="sign_in_status_uncompleted_message">You are not Signed in.\nPress button to Sign in.</string>
+    <!--    SignInFragment-->
+    <string name="general_sign_in">Sign in</string>
+    <string name="general_sign_out">Sign out</string>
+    <string name="sign_in_status_completed_message">You are already Signed in.</string>
+    <string name="sign_in_status_uncompleted_message">You are not Signed in.</string>
 
-    <!--    ArticlesFragment-->
+    <!--    BreakingNewsFragment-->
     <string name="article_was_saved_successfully_message">Article was saved successfully.</string>
     <string name="article_was_deleted_successfully_message">Article was deleted successfully.</string>
-    <string name="article_was_restored_successfully_message">Article was restored successfully.</string>
-
     <string name="article_saving_failed_message">Article saving failed.</string>
     <string name="article_deletion_failed_message">Article deletion failed.</string>
-    <string name="article_restoration_failed_message">Article restoration failed.</string>
 </resources>
