--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,16 +14,19 @@
     <string name="error_unauthorized">Unauthorized. Please Sign-In and try again.</string>
     <string name="error_server">Server error. Please try again later.</string>
     <string name="error_database_operation">Database operation failed.</string>
-    <string name="error_invalid_email">Invalid email.</string>
-    <string name="error_invalid_password">Invalid password.</string>
     <string name="error_user_is_not_registered">User is not registered.</string>
+    <string name="error_user_is_already_registered">User is already registered.</string>
 
     <!--    General-->
     <string name="general_ok">Ok</string>
     <string name="general_cancel">Cancel</string>
     <string name="general_error">Error</string>
+    <string name="general_success">Success!</string>
     <string name="general_continue">Continue</string>
     <string name="general_no_info">No information</string>
+    <string name="general_invalid">Invalid</string>
+    <string name="general_required_field">\*Required field</string>
+    <string name="general_optional_field">\*Optional field</string>
     <string name="general_filter">Filter</string>
 
     <!--    Toolbar title-->
