Delete unused code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="general_error">Error</string>
     <string name="general_success">Success!</string>
     <string name="general_continue">Continue</string>
-    <string name="general_no_info">No information</string>
+    <string name="general_no_info">No info</string>
     <string name="general_invalid">Invalid</string>
     <string name="general_required_field">\*Required field</string>
     <string name="general_optional_field">\*Optional field</string>
