--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,25 +10,24 @@
     <!-- Error handling -->
     <string name="error_generic">Something went wrong. Please try again later.</string>
     <string name="error_no_internet_connection">No Internet connection. Please check the Internet.</string>
+    <string name="error_ssl_exception">SSL operation failed.</string>
     <string name="error_bad_request">Bad request. Please try again later.</string>
+    <string name="error_unauthorized">Unauthorized.</string>
     <string name="error_forbidden">Access was not granted.</string>
     <string name="error_not_found">Resource was not found.</string>
+    <string name="error_not_acceptable">Operation is not acceptable.</string>
     <string name="error_timeout">Timeout error. Please try again when network stabilizes.</string>
     <string name="error_conflict">Conflict with the current state of the target resource.</string>
     <string name="error_unsupported_type">Unsupported data type was provided.</string>
     <string name="error_too_many_requests">Too many requests.</string>
-    <string name="error_unauthorized">Unauthorized. Please Sign-In and try again.</string>
+    <string name="error_unknown_session">Session has expired. Login again.</string>
     <string name="error_server">Server error. Please try again later.</string>
     <string name="error_database_operation">Database operation failed.</string>
-    <string name="error_user_is_not_registered">User is not registered.</string>
-    <string name="error_user_is_already_registered">User is already registered.</string>
 
     <!--    General-->
     <string name="general_ok">Ok</string>
     <string name="general_cancel">Cancel</string>
     <string name="general_error_label">Error</string>
-    <string name="general_success">Success!</string>
-    <string name="general_continue">Continue</string>
     <string name="general_no_info">No info</string>
 
     <!--    Toolbar title-->
